<resources>
    <string name="app_name">Janken</string>
    <string name="count_label">%d / 7 回戦</string>
    <string name="scissors">scissors</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="rival">rival</string>
    <string name="user">user</string>
    <string name="start">よーい、スタート！</string>
    <string name="initText">出さなきゃ負けよ－－</string>
    <string name="initText2">じゃんけんぽん！</string>
    <string name="result_title">リザルト</string>
    <string name="result_image">リザルト画像</string>
    <string name="win_text">私に勝とうなんて100年早いわ！</string>
    <string name="lose_text">くっ…なかなかやるな</string>
    <string name="draw_text">次は勝つ！</string>
    <string name="user_score">あなたの得点：%d</string>
    <string name="computer_score">パソコンの得点：%d</string>
    <string name="draw_count">ドロー回数：%d</string>
    <string name="btn_try_again">もう一回</string>
</resources>